dark mode mostly fixed

--- a/src/globals.scss
+++ b/src/globals.scss
@@ -95,3 +95,9 @@ blockquote {
     padding: 1rem;
     font-size: 1.25rem;
 }
+
+.logo-light { display: block; }
+.logo-dark { display: none; }
+
+[data-bs-theme="dark"] .logo-light { display: none; }
+[data-bs-theme="dark"] .logo-dark { display: block; }
